# bamtofastq

./: .gitmodules  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  deny.toml
.cargo/: config.toml
.github/workflows/: release.yaml  test.yaml
src/: bx_index.rs  fastq_reader.rs  locus.rs  main.rs  rpcache.rs
test/: cr12-v1.bam  lr20.bam  lr21.bam  unpaired_record.bam
