load(
    "@tenx_bazel_rules//rules:cargo.bzl",
    "cargo_binary",
    "cargo_dependencies",
)

exports_files(
    [
        "Cargo.toml",
        "Cargo.lock",
    ],
    visibility = ["//visibility:public"],
)

cargo_dependencies(
    name = "bamtofastq_dependencies",
    fetch = "@bamtofastq_cargo_dependencies",
)

cargo_binary(
    name = "bamtofastq",
    cargo_deps = ":bamtofastq_dependencies",
    srcs = glob(["src/**"]),
    visibility = ["//visibility:public"],
)
