load(
    "@tenx_bazel_rules//rules:cargo.bzl",
    "cargo_binary",
)

exports_files(
    [
        "Cargo.toml",
        "Cargo.lock",
    ],
    visibility = ["//visibility:public"],
)

cargo_binary(
    name = "bamtofastq",
    srcs = glob(["src/**"]),
    cargo_deps = "@bamtofastq_cargo_dependencies",
    visibility = ["//visibility:public"],
)
