[package]
name = "bamtofastq"
version = "1.3.5"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]
license = "MIT"
repository = "https://github.com/10XGenomics/bamtofastq.git"

edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]
resolver = "2"

[dependencies]
docopt = "*"
rust-htslib = "0.38"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
shardio = "0.8.1"
bincode = "1"
itertools = ">=0.8.0"
regex = "*"
tempfile = "*"
backtrace = "0.3"

csv = "1.0.0"
serde = "^1.0.7"
serde_derive = "^1"
serde_bytes = "*"
anyhow = { version = "1.0", features = ["backtrace"] }

[profile.release]
debug = 1
lto = true
