[package]
name = "bamtofastq"
version = "1.4.1"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]
license = "MIT"
repository = "https://github.com/10XGenomics/bamtofastq.git"

edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]
resolver = "2"

[features]
default = ["bzip2", "lzma", "libdeflate"]
bzip2 = ["rust-htslib/bzip2"]
lzma = ["rust-htslib/lzma", "bzip2"]
libdeflate = ["rust-htslib/libdeflate"]
curl = ["rust-htslib/curl"]

[dependencies]
docopt = "*"
rust-htslib = { version = "0.50", default-features = false }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
libz-sys = "1.1.12"
shardio = "0.8.2"
bincode = "1"
itertools = ">=0.8.0"
regex = "*"
tempfile = "*"
backtrace = "0.3"

csv = "1.2.2"
serde = "^1.0.152"
serde_derive = "^1"
serde_bytes = "*"
anyhow = { version = "1.0", features = ["backtrace"] }

[profile.release]
debug = 1
lto = true

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3
